# EffectiveMobile

./: CMakeLists.txt  README.md
module/: bitmap.rw.ixx
source/: main.cxx
